DashboardCharts-Dynamic-board

--- a/DynamicBoard.Application/Components/Pages/Dashboard/DashboardAdd.razor
+++ b/DynamicBoard.Application/Components/Pages/Dashboard/DashboardAdd.razor
@@ -73,7 +73,7 @@
 
     @if (ActionForDelete == true)
     {
-        <h2>Are you sure to delete this Chart</h2>
+        <h2>Are you sure to delete this Dashboard</h2>
         <br />
 
         <FluentButton Appearance="Appearance.Neutral" Autofocus="true" @onclick="OnDeleteChart">Delete</FluentButton>
